--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ box-sizing: border-box;
 
 body {
   height: 100vh;
+  overflow-x: hidden;
 }
 
 #root {
@@ -71,10 +72,17 @@ HEADER
 
 header {
   align-items: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
   display: flex;
   height: 10%;
   justify-content: space-between;
   padding: 5px;
+}
+
+h1 {
+  /* color: rgb(10, 75, 200); */
+  font-size: 30px;
+  font-weight: 1000;
 }
 
 .creds-div {
@@ -101,7 +109,6 @@ MAIN
 .colour-column {
   align-items: center;
   display: flex;
-  /* flex-direction: column; */
   justify-content: space-between;
 }
 
@@ -109,8 +116,24 @@ MAIN
   align-items: center;
   display: flex;
   flex-direction: column;
+  height: 100%;
   justify-content: center;
+  position: relative;
   width: 90px;
+}
+
+.colour-column-inner-btns {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.colour-column-inner-text {
+  align-items: center;
+  bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
 }
 
 .colour-column-item {
@@ -120,41 +143,6 @@ MAIN
 .colour-column-item-input {
   padding: 0;
   margin: 10px 0;
-}
-
-.btn-delete {
-  background-color: transparent;
-  border: none;
-  font-size: 20px;
-  height: 20px;
-  padding: 0;
-  width: 20px;
-}
-
-.btn-shades {
-  background-color: transparent;
-  border: none;
-  /* background: url('https://api.iconify.design/heroicons-outline:view-list.svg') no-repeat center center / contain; */
-  font-size: 30px;
-  height: 30px;
-  padding: 0;
-  width: 30px;
-}
-
-.btn-new-colour {
-  align-items: center;
-  background-color: transparent;
-  border: none;
-  display: flex;
-  flex-grow: 1;
-  font-size: 20px;
-  height: 100%;
-  justify-content: center;
-}
-
-.btn-new-colour:hover {
-  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1), transparent);
-  cursor: pointer;
 }
 
 .shades {
@@ -180,6 +168,54 @@ MAIN
 
 .shade-text:hover {
   opacity: 1;
+}
+
+.hex-text {
+  font-size: 20px;
+}
+
+/* 
+=========================================
+BUTTONS
+=========================================
+*/
+
+
+.btn-delete {
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  height: 20px;
+  padding: 0;
+  width: 20px;
+}
+
+.btn-shades {
+  background-color: transparent;
+  border: none;
+  font-size: 30px;
+  height: 30px;
+  padding: 0;
+  width: 30px;
+}
+
+.btn-new-colour {
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  display: flex;
+  /* flex-grow: 1; */
+  font-size: 20px;
+  height: 20%;
+  justify-content: center;
+  transition: 0.2s all;
+  width: 100px;
+}
+
+.btn-new-colour:hover {
+  /* background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1), transparent); */
+  cursor: pointer;
+  font-size: 30px;
 }
 
 /* 
@@ -222,19 +258,21 @@ TOOLTIPS
 /* Tooltip text */
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 120px;
-  background-color: #555;
+  width: 160px;
+  background-color: black;
   color: #fff;
   text-align: center;
   padding: 5px 0;
   border-radius: 6px;
+
+  font-size: 14px;
 
   /* Position the tooltip text */
   position: absolute;
   z-index: 1;
   bottom: 125%;
   left: 50%;
-  margin-left: -60px;
+  margin-left: -80px;
 
   /* Fade in tooltip */
   opacity: 0;
@@ -250,7 +288,7 @@ TOOLTIPS
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: #555 transparent transparent transparent;
+  border-color: black transparent transparent transparent;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
