--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ header {
   align-items: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.6);
   display: flex;
-  height: 10%;
+  height: 15%;
   justify-content: space-between;
   padding: 5px;
 }
@@ -85,11 +85,39 @@ h1 {
   font-weight: 1000;
 }
 
+.header-rows {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+hr {
+  border: none;
+  border-top: 1px rgba(0, 0, 0, 0.4) solid;
+  margin: 10px 0 10px auto;
+  width: 75%;
+}
+
+.header-top-row {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .creds-div {
   display: flex;
 }
 
 .cred {
+  margin: 0 10px;
+}
+
+.header-bottom-row {
+  align-items: center;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.header-bottom-row-item {
   margin: 0 10px;
 }
 
@@ -103,7 +131,7 @@ MAIN
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(5px, 1fr));
   grid-template-rows: 100%;
-  height: 90%;
+  height: 85%;
 }
 
 .colour-column {
@@ -371,9 +399,19 @@ NEW PALETTE
   z-index: 3;
 }
 
-/* .new-palette-input-btn {
+.new-palette-title {
+  font-size: 22px;
+  /* margin: auto 0; */
+  margin-bottom: 20px;
+}
 
-} */
+.new-palette-input-btn {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  margin-top: 15px;
+  width: 65%;
+}
 
 .overlay {
   background-color: rgba(0, 0, 0, 0.6);
