--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,32 @@ body {
 
 /* 
 =========================================
+FONTS
+=========================================
+*/
+
+@font-face {
+  font-family: 'arvo-bold';
+  src: url(./fonts/Arvo-Bold.ttf);
+}
+
+@font-face {
+  font-family: 'arvo';
+  src: url(./fonts/Arvo-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'muli';
+  src: url(./fonts/Mulish-VariableFont_wght.ttf);
+}
+
+@font-face {
+  font-family: 'telex';
+  src: url(./fonts/Telex-Regular.ttf);
+}
+
+/* 
+=========================================
 HEADER
 =========================================
 */
@@ -80,9 +106,11 @@ header {
 }
 
 h1 {
-  /* color: rgb(10, 75, 200); */
-  font-size: 30px;
-  font-weight: 1000;
+  color: rgb(25, 102, 255);
+  /* box-shadow: 0px 4px rgb(25, 102, 255); */
+  border-bottom: 4px rgb(25, 102, 255) solid;
+  font-family: 'arvo';
+  font-size: 36px;
 }
 
 .header-rows {
@@ -105,6 +133,7 @@ hr {
 
 .creds-div {
   display: flex;
+  font-family: 'telex';
 }
 
 .cred {
@@ -137,7 +166,18 @@ MAIN
 .colour-column {
   align-items: center;
   display: flex;
+  font-family: 'muli';
   justify-content: space-between;
+  position: relative;
+}
+
+.colour-column-text {
+  align-items: center;
+  bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: 100%;
 }
 
 .colour-column-inner {
@@ -146,7 +186,6 @@ MAIN
   flex-direction: column;
   height: 100%;
   justify-content: center;
-  position: relative;
   width: 90px;
 }
 
@@ -154,14 +193,6 @@ MAIN
   align-items: center;
   display: flex;
   flex-direction: column;
-}
-
-.colour-column-inner-text {
-  align-items: center;
-  bottom: 10px;
-  display: flex;
-  flex-direction: column;
-  position: absolute;
 }
 
 .colour-column-item {
@@ -200,6 +231,10 @@ MAIN
 
 .hex-text {
   font-size: 20px;
+}
+
+.rgb-text {
+  font-size: 14px;
 }
 
 /* 
@@ -263,12 +298,12 @@ LINKS
 */
 
 a {
-  color: darkslategray;
+  color: rgb(25, 102, 255);
   text-decoration: none;
 }
 
 a:visited {
-  color: darkslategray;
+  color: rgb(25, 102, 255);
 }
 
 /* 
@@ -332,21 +367,23 @@ DROP DOWN MENUS
 */
 
 .dropdown {
+  font-family: 'telex';
   position: relative;
   z-index: 1;
   width: 222px;
 }
 
 .dropdown-header {
-  border: 1px black solid;
+  border: 2px rgb(25, 102, 255) solid;
   cursor: pointer;
+  /* font-weight: bold; */
   padding: 5px;
   user-select: none;
 }
 
 .dropdown-list {
   background-color: white;
-  border: 1px black solid;
+  border: 2px rgb(25, 102, 255) solid;
   border-top: none;
   height: 150px;
   overflow-y:auto;
@@ -359,18 +396,22 @@ DROP DOWN MENUS
 }
 
 .dropdown-item {
-  font-weight: bold;
+  margin-right: 10px;
+  overflow: hidden;
   padding: 10px 5px;
-  width: 85%;
+  width: 100%;
+  white-space: nowrap;
 }
 
 .dropdown-item:hover {
+  color: rgb(25, 102, 255);
   cursor: pointer;
-  background-color: rgb(255, 196, 0);
+  background-color: rgba(251, 255, 0, 0.4);
 }
 
 .dropdown-item-delete-btn {
-  width: 15%;
+  margin: 5px;
+  /* width: 15%; */
 }
 
 .selected {
@@ -382,6 +423,12 @@ DROP DOWN MENUS
 NEW PALETTE
 =========================================
 */
+
+.new-palette-inputs > input,
+.new-palette-input-btn > button,
+.new-palette > button {
+  font-family: 'telex';
+}
 
 .new-palette-inputs {
   align-items: center;
@@ -400,8 +447,11 @@ NEW PALETTE
 }
 
 .new-palette-title {
+  color: rgb(25, 102, 255);
+  /* box-shadow: 0 2px rgb(25, 102, 255); */
+  border-bottom: 2px rgb(25, 102, 255) solid;
+  font-family: 'arvo';
   font-size: 22px;
-  /* margin: auto 0; */
   margin-bottom: 20px;
 }
 
