--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@ h1 {
 
 hr {
   border: none;
-  border-top: 1px rgba(0, 0, 0, 0.4) solid;
+  border-top: 1px rgba(25, 102, 255, 1) solid;
   margin: 10px 0 10px auto;
   width: 75%;
 }
@@ -375,8 +375,8 @@ DROP DOWN MENUS
 
 .dropdown-header {
   border: 2px rgb(25, 102, 255) solid;
+  border-radius: 5px 5px 0 0;
   cursor: pointer;
-  /* font-weight: bold; */
   padding: 5px;
   user-select: none;
 }
@@ -384,6 +384,7 @@ DROP DOWN MENUS
 .dropdown-list {
   background-color: white;
   border: 2px rgb(25, 102, 255) solid;
+  border-radius: 0 0 5px 5px;
   border-top: none;
   height: 150px;
   overflow-y:auto;
@@ -410,8 +411,14 @@ DROP DOWN MENUS
 }
 
 .dropdown-item-delete-btn {
+  color: white;
+  cursor: pointer;
+  background-color: rgb(25, 102, 255);
+  border: none;
+  border-radius: 5px;
+  font-family: 'telex';
   margin: 5px;
-  /* width: 15%; */
+  padding: 2px 10px;
 }
 
 .selected {
@@ -427,6 +434,7 @@ NEW PALETTE
 .new-palette-inputs > input,
 .new-palette-input-btn > button,
 .new-palette > button {
+  cursor: pointer;
   font-family: 'telex';
 }
 
@@ -446,6 +454,15 @@ NEW PALETTE
   z-index: 3;
 }
 
+.new-palette-inputs > input {
+  width: 140px;
+  transition: 0.2s ease-in width;
+}
+
+.new-palette-inputs > input:focus {
+  width: 160px;
+}
+
 .new-palette-title {
   color: rgb(25, 102, 255);
   /* box-shadow: 0 2px rgb(25, 102, 255); */
@@ -461,6 +478,16 @@ NEW PALETTE
   justify-content: space-evenly;
   margin-top: 15px;
   width: 65%;
+}
+
+.new-palette-input-btn > button,
+.new-palette > button {
+  color: white;
+  background-color: rgb(25, 102, 255);
+  border: none;
+  border-radius: 5px;
+  height: 30px;
+  padding: 2px 10px;
 }
 
 .overlay {
