--- a/src/App.css
+++ b/src/App.css
@@ -231,6 +231,7 @@ MAIN
 
 .hex-text {
   font-size: 20px;
+  font-weight: bold;
 }
 
 .rgb-text {
@@ -269,6 +270,7 @@ BUTTONS
   display: flex;
   /* flex-grow: 1; */
   font-size: 20px;
+  font-weight: bold;
   height: 20%;
   justify-content: center;
   transition: 0.1s font-size;
@@ -484,10 +486,24 @@ NEW PALETTE
 .new-palette > button {
   color: white;
   background-color: rgb(25, 102, 255);
-  border: none;
+  border: 2px rgb(25, 102, 255) solid;
   border-radius: 5px;
   height: 30px;
   padding: 2px 10px;
+  transition: 0.2s color;
+  transition: 0.2s background-color;
+}
+
+.new-palette-input-btn > button:hover,
+.new-palette > button:hover {
+  color: rgb(25, 102, 255);
+  background-color: white;
+}
+
+.new-palette-input-btn > button:focus,
+.new-palette > button:focus {
+  color: rgb(25, 102, 255);
+  background-color: white;
 }
 
 .overlay {
