--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,8 @@ box-sizing: border-box;
 }
 /*#endregion*/
 
+/* media query pixels 445 */
+
 body {
   height: 100vh;
   overflow-x: hidden;
@@ -157,9 +159,12 @@ MAIN
 */
 
 .colours {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(auto-fit, minmax(5px, 1fr));
-  grid-template-rows: 100%;
+  grid-template-rows: 100%; */
+
+  display: flex;
+
   height: 85%;
 }
 
@@ -169,6 +174,8 @@ MAIN
   font-family: 'muli';
   justify-content: space-between;
   position: relative;
+  min-width: 100px;
+  width: 100%;
 }
 
 .colour-column-text {
@@ -176,17 +183,19 @@ MAIN
   bottom: 10px;
   display: flex;
   flex-direction: column;
+  left: 50%;
   position: absolute;
-  width: 100%;
+  text-align: center;
+  transform: translate(-50%, 0);
 }
 
 .colour-column-inner {
   align-items: center;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   height: 100%;
-  justify-content: center;
-  width: 90px;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .colour-column-inner-btns {
@@ -514,4 +523,60 @@ NEW PALETTE
   top: 0;
   width: 100vw;
   z-index: 2;
+}
+
+
+/* 
+=========================================
+MEDIA QUERYS
+=========================================
+*/
+
+@media screen and (max-width: 700px) {
+  .colours {
+    flex-direction: column;
+  }
+
+  .colour-column {
+    flex-direction: row-reverse;
+    min-height: 75px;
+    height: 100%;
+  }
+
+  .colour-column-text {
+    bottom: 0;
+    height: 100%;
+    justify-content: center;
+    left: 0;
+    transform: translate(0, 0);
+    width: 20%;
+  }
+
+  .colour-column-inner {
+    width: 80%;
+  }
+
+  .colour-column-inner-btns {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 50%;
+  }
+
+  .shades {
+    flex-direction: row;
+  }
+
+  .shade {
+    min-width: 5px;
+    width: 100%;
+  }
+
+  .shade-text,
+  .main-shade-text {
+    text-align: center;
+    text-orientation: sideways;
+    writing-mode: vertical-rl;
+    width: unset;
+  }
+
 }
